--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -33,14 +33,16 @@ button {
     margin: 10px;
     cursor: pointer;
     color: #fff;
-    background-color: #515052;
+    background-color: #8055ac;
     border-radius: 5px;
     border: 0;
-    padding: 20px;
+    padding: 10px;
 }
 
 button:hover {
-    background-color: #9e99a1;
+    background-color: darkgrey;
+    color: #8055ac;
+    border-style: solid;
 }
 
 .options button {
@@ -61,7 +63,7 @@ input[type="text"] {
     margin-top: 20px;
     padding-top: 15px;
     color: #fff;
-    border-top: 2px solid #4B0082;
+    border-top: 2px solid #8055ac;
 }
 
 ol {
